--- a/Style/EstiloPrincipal.css
+++ b/Style/EstiloPrincipal.css
@@ -133,4 +133,25 @@ label{
   
 
 
+.tienda{
+  display:grid;
+  grid-template:repeat(3, 300px) / repeat(3, 300px);
+  justify-content: center;
+  grid-gap:16px;
+  width:100%;
+  height:auto; 
+  
+  
+}
+
+.tienda article {
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  flex-flow: wrap;
+  border: solid;
+  border-radius: 15px;
+  overflow: hidden;
+  }
+  
 
