--- a/Style/EstiloPrincipal.css
+++ b/Style/EstiloPrincipal.css
@@ -1,4 +1,3 @@
-
 *{
   margin: 0;
   padding: 0;
@@ -128,7 +127,10 @@ label{
   cursor: pointer;
 }
 
-/*****************************************/
+
+-------------------------------MODULOS------------------------------
+
+  
 .tienda{
   display:grid;
   grid-template:repeat(3, 300px) / repeat(3, 300px);
@@ -149,4 +151,3 @@ label{
   border-radius: 15px;
   overflow: hidden;
   }
- 
